Use native device width on mobile devices

--- a/generate.html
+++ b/generate.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8"/>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
     <!-- Raisin picture is CC-BY-SA-2.5 from Cary Bass, https://commons.wikimedia.org/wiki/File:Single_raisin.jpg -->
     <link rel="icon" type="image/png" href="icon-16.png"/>
 
